@@ -1,6 +1,7 @@
 Version 1.0.16 (Build 2021033000)
 - fixed bug in backup/restore of user attempts
 - fixed bug in reset of user attempts
+- destroy old questions so hidden media players stop playing
 
 Version 1.0.16 (Build 2021033000
 -added cleaning of text, so ssml requests did not get in trouble
